--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.novoda:bintray-release:0.9.1'
         classpath 'com.google.android.gms:strict-version-matcher-plugin:1.2.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
     }
 }
 allprojects {
