--- a/core_settings.gradle
+++ b/core_settings.gradle
@@ -49,6 +49,7 @@ include modulePrefix + 'extension-rtmp'
 include modulePrefix + 'extension-leanback'
 include modulePrefix + 'extension-jobdispatcher'
 include modulePrefix + 'extension-workmanager'
+include modulePrefix + 'extension-multi-track'
 
 project(modulePrefix + 'library').projectDir = new File(rootDir, 'library/all')
 project(modulePrefix + 'library-common').projectDir = new File(rootDir, 'library/common')
@@ -78,3 +79,4 @@ project(modulePrefix + 'extension-rtmp').projectDir = new File(rootDir, 'extensi
 project(modulePrefix + 'extension-leanback').projectDir = new File(rootDir, 'extensions/leanback')
 project(modulePrefix + 'extension-jobdispatcher').projectDir = new File(rootDir, 'extensions/jobdispatcher')
 project(modulePrefix + 'extension-workmanager').projectDir = new File(rootDir, 'extensions/workmanager')
+project(modulePrefix + 'extension-multi-track').projectDir = new File(rootDir, 'extensions/multi-track')
