--- a/settings.gradle
+++ b/settings.gradle
@@ -22,11 +22,13 @@ include modulePrefix + 'demo'
 include modulePrefix + 'demo-cast'
 include modulePrefix + 'demo-gl'
 include modulePrefix + 'demo-surface'
+include modulePrefix + 'demo-multi-track'
 include modulePrefix + 'playbacktests'
 project(modulePrefix + 'demo').projectDir = new File(rootDir, 'demos/main')
 project(modulePrefix + 'demo-cast').projectDir = new File(rootDir, 'demos/cast')
 project(modulePrefix + 'demo-gl').projectDir = new File(rootDir, 'demos/gl')
 project(modulePrefix + 'demo-surface').projectDir = new File(rootDir, 'demos/surface')
+project(modulePrefix + 'demo-multi-track').projectDir = new File(rootDir, 'demos/multi-track')
 project(modulePrefix + 'playbacktests').projectDir = new File(rootDir, 'playbacktests')
 
 apply from: 'core_settings.gradle'
