multi-track app initial.

--- a/demos/multi-track/src/main/AndroidManifest.xml
+++ b/demos/multi-track/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".MultiPlayerActivity" />
+    <activity android:name=".MultiMusicActivity" />
+    <activity android:name=".SimpleMultiTrackActivity" />
   </application>
 
 </manifest>
