--- a/demos/multi-track/build.gradle
+++ b/demos/multi-track/build.gradle
@@ -50,5 +50,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
